force-app/main/default/objects/PTOFeeCode__c/PTOFeeCode__c.object-meta.xml
<CustomObject>
    <label>PTO Fee Code</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>S. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTO Fee Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>