force-app/main/default/objects/PTOFeeCode__c/fields/FeeCode__c.field-meta.xml
<CustomField>
    <fullName>FeeCode__c</fullName>
    <label>Fee Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>