force-app/main/default/objects/PTOFeeCode__c/fields/Surcharge_Code__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Code__c</fullName>
    <label>Surcharge Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>