force-app/main/default/objects/PTOFeeCode__c/fields/Term_Name__c.field-meta.xml
<CustomField>
    <fullName>Term_Name__c</fullName>
    <label>Term Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>