force-app/main/default/objects/PTOFeeCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Term_Name__c</columns>
    <columns>FeeCode__c</columns>
    <columns>Surcharge_Code__c</columns>
    <columns>Entity_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>